[gd_scene load_steps=5 format=3 uid="uid://bihoqmaajcxp1"]

[ext_resource type="Script" path="res://Skills/PC3/S1/GD_ThrowBigShriken.gd" id="1_0alx3"]
[ext_resource type="PackedScene" uid="uid://numle83ju3vg" path="res://Skills/PC3/S1/S_BigShuriken.tscn" id="2_sisl0"]
[ext_resource type="Texture2D" uid="uid://bv58iyjvfysd8" path="res://Assets/Skills/PC3_Sasuke/SP_PC3_S1.png" id="3_gxpu1"]
[ext_resource type="AudioStream" uid="uid://xxdu7xuegdxo" path="res://Audio/Character/PC3/PC3_S1_Shuriken.mp3" id="4_hhl8j"]

[node name="S_ThrowBigShutiken" type="Node2D"]
script = ExtResource("1_0alx3")
shuriken = ExtResource("2_sisl0")
skill_name = "Big Shuriken"
skill_description = "Throw a shuriken horizontally. The first target it struck is dealt damage, the shuriken travels indefinitely.
DAMAGE: ATK * 1.5"
max_cooldown = 2
skill_spritesheet = ExtResource("3_gxpu1")

[node name="ShurikenTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShurikenSpawnLocation" type="Node2D" parent="."]
position = Vector2(20, -20)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hhl8j")
volume_db = -10.0

[connection signal="timeout" from="ShurikenTimer" to="." method="_on_shuriken_timer_timeout"]
